--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                   <a href="vietanhvienctt">vietanhviencntt@gmail.com</a>
               </div>
                     <p class="lead mb-5">
-                        Sinh viên năm 2 khoa Kĩ thuật máy tính viện Công nghệ thông tin và truyền thông
+                        Sinh viên năm 3 khoa Kĩ thuật máy tính trường Công nghệ thông tin và truyền thông
                         đại học Bách Khoa Hà Nội
                     </p>
                     <div class="social-icon">
@@ -74,8 +74,8 @@
                   <h2 class="mb-5">Experience</h2>
                   <div class="d-flex flex-column flex-mb-row justify-content-between mb-5">
                       <div class="flex-grow-1">
-                          <h3 class="mb-8">Junior Web Developer</h3>
-                          <div class="subheading mb-3">Advanced mathematics</div>
+                          <h3 class="mb-8">Fresher AI</h3>
+                          <div class="subheading mb-3">Computer Vision</div>
                           <p>Phát triển website, xây dựng hệ quản trị cơ sở dữ liệu, lập trình hệ nhúng
                           hỗ trợ giảng dạy các môn đại cương toán cao cấp, triết học, cấu trúc dữ liệu và giải thuật,
                           trí tuệ nhân tạo AI, machine learning, deep learning</p>
