--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -76,39 +76,60 @@
                       <div class="flex-grow-1">
                           <h3 class="mb-8">Fresher AI</h3>
                           <div class="subheading mb-3">Computer Vision</div>
-                          <p>Phát triển website, xây dựng hệ quản trị cơ sở dữ liệu, lập trình hệ nhúng
-                          hỗ trợ giảng dạy các môn đại cương toán cao cấp, triết học, cấu trúc dữ liệu và giải thuật,
-                          trí tuệ nhân tạo AI, machine learning, deep learning</p>
+                          <p>1, Tham gia lab nghiên cứu innovation về xử lí camera nhiệt tích hợp
+                              trên raspberry pi </p>
+                          <p>    2, Tham gia lab nghiên cứu fintech về feature selection của trung tâm
+                              BKAI </p>
+                           <p>   3, Xây dựng hệ thống phát hiện đeo khẩu trang bằng thư viện OpenCV
+                           </p>
+                           <p>   4, Kết hợp model SSD và face_recognition trong checking mask và
+                              đếm số lượng
+                           </p>
+                           <p>   5, Thuật toán object tracking trong đo tốc độ xe hơi qua frame fps
+                           </p>
+                            <p>  6, Nhận diện hành vi con người bằng thư viện pose estimate kết hợp
+                              với model deep learning LSTM
+                            </p>
+                              7, Công cụ tìm kiếm hình ảnh Content base Image qua model VGG16
+                          </p>
+                             <p>8, Sử dụng thư viện OpenCV tìm contours trong chấm điểm trắc
+                              nghiệm, đo kích thước vật thể, tìm biển số xe
+                             </p>
+                              <p>9, Sử dụng model YOLO kết nối với telegram đưa ra cảnh báo trông đồ
+                              vật </p>
                       </div>
                       <div class="flex-shrink-0">
                           <span class="text-primary">
-                              September 2019 - Director
+                              Thực tập sinh
                           </span>
 
                       </div>
                   </div>
                   <div class="d-flex flex-column flex-mb-row justify-content-between mb-5">
                       <div class="flex-grow-1">
-                          <h3 class="mb-8">Project designer</h3>
+                          <h3 class="mb-8">APP Developer</h3>
                           <div class="subheading mb-3">Font-design</div>
-                          <p>Thiết kế dự án, phác thảo, xây dựng mô hình</p>
+                          <p>Lập trình app bằng android studio</p>
+                          <p>Tích hợp model AI trên các app </p>
                       </div>
                       <div class="flex-shrink-0">
                           <span class="text-primary">
-                              September 2020 - Director
+                              Thực tập sinh
                           </span>
 
                       </div>
                   </div>
                   <div class="d-flex flex-column flex-mb-row justify-content-between mb-5">
                       <div class="flex-grow-1">
-                          <h3 class="mb-8">Business Administrator</h3>
-                          <div class="subheading mb-3">Page company</div>
-                          <p>Quản trị dự án, management tại page hỗ trợ làm đồ án, dự án, phát triển phần mềm</p>
+                          <h3 class="mb-8">WEB developer</h3>
+                          <div class="subheading mb-3">Fullstack</div>
+                          <p>Thiết kế website quản lí trường mầm non SeedSchool</p>
+                          <p>Ngôn ngữ: html, css, javascript</p>
+                          <p>Framework: Flask, React</p>
                       </div>
                       <div class="flex-shrink-0">
                           <span class="text-primary">
-                              May 2021 - Director
+                              Thực tập sinh
                           </span>
 
                       </div>
@@ -126,7 +147,8 @@
                            <div>
                                Computer Engineering
                            </div>
-                           <p>GPA: 3.88</p>
+                           <p>CPA: 3.78</p>
+                           <p>Điểm rèn luyện: 96</p>
                        </div>
                        <div class="flex-shrink-1">September 2019 - ?</div>
                    </div>
@@ -135,11 +157,12 @@
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-mb-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-8">Ha Noi University of Science and Technology</h3>
+                            <h3 class="mb-8"> Symposium On Information and Communication Technology</h3>
                             <div>
                                 Artificial Intelligence
                             </div>
-                            <p>Nghiên cứu sinh thạc sĩ</p>
+                            <p>Lab ISE trung tâm BK-AI</p>
+                            <p>Trung tâm đổi mới sáng tạo innovation</p>
                         </div>
                         <div class="flex-shrink-1">September 2019 - ?</div>
                     </div>
@@ -158,9 +181,11 @@
                  </ul>
                  <div class="subheading mb-3">Workflow</div>
                  <ul class="fa-ul mb-8">
-                     <li><span class="fa-li"><i class="fas fa-check"></i></span>Phát triển dự án </li>
-                     <li><span class="fa-li"><i class="fas fa-check"></i></span>Xây dựng phần mềm</li>
-                     <li><span class="fa-li"><i class="fas fa-check"></i></span>Hỗ trợ đại cương</li>
+                     <li><span class="fa-li"><i class="fas fa-check"></i></span>Data Science </li>
+                     <li><span class="fa-li"><i class="fas fa-check"></i></span>Data Analyst</li>
+                     <li><span class="fa-li"><i class="fas fa-check"></i></span>Computer Vision</li>
+                     <li><span class="fa-li"><i class="fas fa-check"></i></span>App-Developer</li>
+                     <li><span class="fa-li"><i class="fas fa-check"></i></span>Web-Developer</li>
 
                  </ul>
              </div>
@@ -171,7 +196,7 @@
               <div class="resume-section-content">
                   <h2 class="mb-5">Interests</h2>
                   <p>Nghiên cứu, xây dựng phần mềm, thể thao bóng đá bóng chuyền, cầu lông, bơi lội tập gym</p>
-                  <p> cá độ, lô đề cờ bạc, hư hỏng</p>
+                  <p>Làm việc teamwork</p>
               </div>
             </section>
             <hr class="m-8">
@@ -181,20 +206,38 @@
                 <ul class="fa-ul mb-8">
                     <li>
                         <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                        Học bổng toàn phần đại học bách khoa Hà Nội
+                        Học bổng khuyến khích học tập loại A kì 20202
                     </li>
                     <li>
                         <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                        Qũy học bổng Châu A
+                        Học bổng khuyến khích học tập loại A kì 20201
+
                     </li>
                     <li>
                         <span class="fa-li"><i class="fas fa-trophy text-warning"></i> </span>
-                        Top 20 đại học Bách Khoa Hà Nội
+                        Học bổng khuyến khích học tập loại B kì 20192
                     </li>
                     <li>
                         <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                        Học bổng Bkav dành cho nghiên cứu sinh
+                        Giải nhì kì thi chọn học sinh giỏi Toán lớp 11 cấp tỉnh, tỉnh Thái Nguyên
+
                     </li>
+                    <li>
+                        <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                        Giải nhì ba thi chọn học sinh giỏi Toán lớp 10 cấp tỉnh, tỉnh Thái Nguyên
+
+                    </li>
+                    <li>
+                        <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                        Học bổng khuyến khích học tập họ Dương
+
+                    </li>
+                    <li>
+                        <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                        Điểm thi đại học năm 2019: 27.15
+
+                    </li>
+
                 </ul>
             </div>
             </section>
